--- a/application.yml
+++ b/application.yml
@@ -4,3 +4,18 @@ eureka:
     register-with-eureka: true
     service-url:
       defalutZone: http://localhost:8761/eureka
+
+spring:
+ datasource:
+  driver-class-name:
+  url:
+  username:
+  password:
+ jpa:
+   show-sql: true
+   hibernate:
+    ddl-auto: update
+   properties:
+     hibernate:
+      dialect: org.hibernate.dialect.MySQL8Dialect
+      
