--- a/application.yml
+++ b/application.yml
@@ -7,10 +7,10 @@ eureka:
 
 spring:
  datasource:
-  driver-class-name:
-  url:
-  username:
-  password:
+  driver-class-name: com.mysql.cj.jdbc.Driver
+  url: jdbc: mysql://localhost:3307/mock
+  username: root
+  password: root
  jpa:
    show-sql: true
    hibernate:
